# inbox-intel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER_QUICKSTART.md  Dockerfile  Makefile  README.md  README.old.md  backfill.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: prompts.yml
data/: inbox_intel.db
docs/: README-requirements-checklist.md  backfill.md  backfill_example.sh  docker-compose-guide.md  docker-compose-requirements.md  docker.md  plan.md  product.md
src/: __init__.py  backfill.py  config.py  database.py  guesty_client.py  llm_classifier.py  logger.py  main.py  notifications.py  polling.py  reporter.py  worker.py
templates/: early_checkin_alert.md  general_question_alert.md  late_checkout_alert.md  maintenance_issue_alert.md  special_request_alert.md
tests/: conftest.py  test_backfill.py  test_database.py  test_guesty_client.py  test_llm_classifier.py  test_main.py  test_notifications.py  test_polling.py  test_reporter.py  test_webhook.py  test_worker.py
