[project]
name = "inbox-intel"
version = "0.1.0"
description = "Self-hosted service that monitors Guesty guest messages with LLM classification"
requires-python = ">=3.11"
dependencies = [
    "requests==2.32.5",
    "python-dotenv==1.1.1",
    "apscheduler==3.11.0",
    "fastapi==0.118.0",
    "uvicorn==0.37.0",
    "sqlalchemy==2.0.43",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "mypy>=1.13.0",
    "pytest==8.4.2",
    "types-requests>=2.32.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "B008",   # FastAPI dependency injection pattern
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true
